test/fixtures/public/analysis/success/method_this.jmm
class A {
    public int bar() {
        this.foo();
        return 1;
    }
    public int foo() {
        return 0;
    }
}