test/fixtures/public/analysis/fail/call_non_static_method_from_class.jmm
class A {
    public static void main(String[] args) {
        A.foo();
    }
    public int foo() {
        return 0;
    }
}
